Closed
Bug 1283489
Opened 9 years ago
Closed 9 years ago
"ASSERTION: Clock should go forwards" changing playbackRate
Categories
(Core :: Audio/Video: Playback, defect, P3)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: jruderman, Assigned: fatseng)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
No description provided.
| Reporter | ||
Comment 1•9 years ago
|
||
Comment 2•9 years ago
|
||
Farmer,
This bug should be suitable to you.
Please have a look.
Thanks!
Flags: needinfo?(fatseng)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → fatseng
Updated•9 years ago
|
Priority: -- → P2
Mass change P2 -> P3
Priority: P2 → P3
| Assignee | ||
Comment 5•9 years ago
|
||
http://searchfox.org/mozilla-central/source/dom/media/mediasink/AudioSinkWrapper.cpp#125
mParams.mPlaybackRate should be updated after call GetVideoPosition().
| Assignee | ||
Comment 6•9 years ago
|
||
I will prepare patch later.
| Assignee | ||
Comment 7•9 years ago
|
||
Here is try server result.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=796bd18fa38e
Attachment #8769527 -
Flags: review?(jwwang)
Comment 8•9 years ago
|
||
Comment on attachment 8769527 [details] [diff] [review]
mParams.mPlaybackRate should be updated after store mPlayDuration
Review of attachment 8769527 [details] [diff] [review]:
-----------------------------------------------------------------
I can't see how that will make a difference. Can you elaborate it?
| Assignee | ||
Comment 9•9 years ago
|
||
http://searchfox.org/mozilla-central/source/dom/media/mediasink/AudioSinkWrapper.cpp#133
GetVideoPosition(now) generate timestamp and store in mPlayDuration;
http://searchfox.org/mozilla-central/source/dom/media/mediasink/AudioSinkWrapper.cpp#67
but GetVideoPosition() use mParams.mPlaybackRate to calculate it.
Therefore, we should use old playback rate to generate it.
Flags: needinfo?(jwwang)
Comment 10•9 years ago
|
||
Comment on attachment 8769527 [details] [diff] [review]
mParams.mPlaybackRate should be updated after store mPlayDuration
Review of attachment 8769527 [details] [diff] [review]:
-----------------------------------------------------------------
Please add comments why mParams.mPlaybackRate should be updated after the call to GetVideoPosition().
Attachment #8769527 -
Flags: review?(jwwang) → review+
Updated•9 years ago
|
Flags: needinfo?(jwwang)
| Assignee | ||
Comment 11•9 years ago
|
||
Carry on Comment 10
Attachment #8769527 -
Attachment is obsolete: true
Attachment #8769556 -
Flags: review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Comment 12•9 years ago
|
||
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ed9cd1e7f95a
mParams.mPlaybackRate should be updated after call GetVideoPosition(). r=jwwang
Keywords: checkin-needed
Comment 13•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•