Bug 1283489 - mParams.mPlaybackRate should be updated after call GetVideoPosition(). r=jwwang